...
        static let segmentedWidth: CGFloat = UIScreen.screenWidth / 1.5
        static let segmentedString: String = ""
        static let phoneScreenWidth: CGFloat = 431
        static let twoColumns: Int = 2
        static let threeColumns: Int = 3
        static let segmentedIdentifier: String = "search"
        static let navigationLinkIdentifier: String = "detail"
    }
    
    @ObservedObject private var viewModel: NewsListViewModel
    
    init() {
        self._viewModel = ObservedObject(wrappedValue: NewsListViewModel())
...
