...
        static let segmentedSpacing: CGFloat = 8
        static let segmentedWidth: CGFloat = UIScreen.screenWidth / 1.5
        static let segmentedString: String = ""
        static let screenMaxSize: CGFloat = 933
        static let maxSizeImage: CGFloat = 3
        static let minSizeImage: CGFloat = 4
        static let segmentedIdentifier: String = "type"
        static let imageIdentifier: String = "image"
    }
    
    @ObservedObject private var viewModel: NewsDetailViewModel
    @State var isloading = false
    
...
